# Calcster

./: pyproject.toml
app/: calcster.py  main.py
app/calcster/: __init__.py  oneoperationcalc.py  simplecalc.py
app/infra/: chain.py
